# kanban

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  TUTORIAL.md  docker-compose.yml  review.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  auth.py  db.py  main.py  seed.py
backend/tests/: conftest.py  test_ai.py  test_ai_chat.py  test_auth.py  test_board.py  test_main.py
docs/: PLAN.md  database.md  db-schema.json
frontend/: AGENTS.md  playwright.config.ts
frontend/src/app/: globals.css
frontend/src/components/: AuthGate.test.tsx  AuthGate.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx  NewCardForm.tsx  icons.tsx
frontend/src/lib/: auth.ts  board.ts  chat.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1
